k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: swr.ap-southeast-3.myhuaweicloud.com/baykar-case/frontend:v1
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: swr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    kubernetes.io/elb.id: "e3ece5e3-b6f9-4731-b5cd-75598cfa9ca3"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
